--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: Leaf Blog
+title: owlemily(Sujin)
 iconURL: assets/default-icon.png
-theme: jekyll-theme-leaf
+#theme: jekyll-theme-leaf
 
 # for a clean URL
 permalink: :slug
 
 social:
-  twitter: _SupunKavinda
-  github: SupunKavinda
+  #twitter: _SupunKavinda
+  github: owlemily
 
 plugins:
  - jekyll-feed
